--- a/app/index.html
+++ b/app/index.html
@@ -1,87 +1,169 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Clear View Escapes</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
-  <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <title>Name: Logrange: streaming database</title>
+  <meta name="keywords" content="kjfsjvjkshflja;kdj bla-bla-bla dkfskdjlkj for Developers">
+  <meta name="description" content="ofuhslhfla djhflhs skjdhfalhdl skdjfhsdhf logs">
+  <link rel='stylesheet' href='temp/styles/styles.css' type='text/css' >
 </head>
 <body>
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="wrapper">
+      <div class="site-header__logo">
+        <img src="assets/images/icons/logrange_logo.png">
+      </div>
+      <div>
+
+        <div class="site-header__menu-icon">
+
+        </div>
+
+        <div class="site-header__menu-content">
+          <div class="site-header__btn-container">
+            <a class="btn" href="#">Get in Touch</a>
+          </div>
+          <nav class="primary-nav primary-nav--pull-right">
+            <ul>
+              <!--li><a href="#docs">Main</a></li-->
+              <li><a href="#solutions">Docs</a></li>
+              <li><a href="#pricing">Blog</a></li>
+              <li><a href="#testimonials">Download</a></li>
+              <!--li><a href="#contact">Contact</a></li-->
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
   </header>
 
   <div class="large-hero">
-    <img src="assets/images/hero--large.jpg">
-    <h1>Your clarity.</h1>
-    <h2>One trip away.</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
+
+    <picture>
+         <source srcset="assets/images/background-1920.jpg 1920w" media="(min-width: 1380px)">
+         <source srcset="assets/images/background-1280.jpg 1280w" media="(min-width: 990px)">
+         <!--source srcset="assets/images/hero--small.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w" media="(min-width: 640px)"-->
+         <img srcset="assets/images/background-640.jpg 640w" alt="Logrange: streaming database" class="large-hero__image">
+    </picture>
+
+    <div class="large-hero__text-content">
+      <div class="wrapper">
+        <h1 class="large-hero__title">Logrange</h1>
+        <h2 class="large-hero__subtitle">Streaming database</h2>
+        <p class="large-hero__description">Logrange is highly performant streaming database for aggregation streams of records like application logs, system metrics, audit logs etc. from thousands of sources.</p>
+        <p><a class="btn btn--orange btn--large" href="#">Try out</a></p>
+      </div>
+    </div>
   </div>
 
-  <div id="our-beginning">
-    <h2>The first trip we planned was our own.</h2>
-    <h3>Ever since, we&rsquo;ve been working to make travel better for everyone.</h3>
-    <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
-    <img src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">
-    <h2>Here&rsquo;s how we got started&hellip;</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
+
+  <div id="features" class="page-section">
+    <div class="wrapper">
+
+      <h2 class="section-title">Designed for working with <strong>streams</strong></h2>
+
+      <div class="row row--gutters-large generic-content-container">
+
+        <div class="row__medium-6">
+
+          <div class="feature-item">
+            <i class="material-icons md-icons feature-item__icon">import_export</i>
+            <h3 class="feature-item__title">Native for Stream processing </h3>
+            <p>Saving streams of records for security alerts, analytics, statistics, anomalies predictions and system health monitoring</p>
+          </div>
+
+          <div class="feature-item">
+            <i class="material-icons md-icons feature-item__icon">network_check</i>
+            <h3 class="feature-item__title">Highly performant</h3>
+            <p>Accepting millions of records or hundred megabytes per second from thousands of data sources.</p>
+          </div>
+
+          <div class="feature-item">
+            <i class="material-icons md-icons feature-item__icon">language</i>
+            <h3 class="feature-item__title">Scalability</h3>
+            <p> Logrange’s performance doesn't depend on the database size either it is 100Kb or 100Tb of data. Saving as much data as you need.</p>
+          </div>
+
+        </div>
+
+        <div class="row__medium-6">
+
+          <div class="feature-item">
+            <i class="material-icons md-icons feature-item__icon">code</i>
+            <h3 class="feature-item__title">Open Source</h3>
+            <p>Written entirely in Go, Logrange is available under the Apache 2.0 license for easy adoption. [Run it yourself](link), or [use pre-build installations](link).</p>
+          </div>
+
+          <div class="feature-item">
+            <i class="material-icons md-icons feature-item__icon">call_split</i>
+            <h3 class="feature-item__title">Aggregate Data from Everywhere</h3>
+            <p>Stream data from different sources and locations: application logs, metrics, run-time records can be saved to Logrange.</p>
+          </div>
+
+          <div class="feature-item">
+            <i class="material-icons md-icons feature-item__icon">security</i>
+            <h3 class="feature-item__title">Secure</h3>
+            <p>The data is secure during access, transit and storage. Whether Logrange is deployed as standalone, in cloud or in a containerized environment.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
 
-  <div id="features">
-    <img src="assets/images/icons/star.svg">
-    <h2>Our Features</h2>
-  
-    <img src="assets/images/icons/rain.svg">
-    <h3>We&rsquo;ll Watch the Weather</h3>
-    <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
+  <div id="how-it-works" class="page-section page-section--blue page-section--b-padding-large">
+    <div class="wrapper">
 
-    <img src="assets/images/icons/globe.svg">
-    <h3>Global Guides</h3>
-    <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of the world you want to escape to we know the most scenic and inspiring locations.</p>
-
-    <img src="assets/images/icons/wifi.svg">
-    <h3>Wi-Fi Waypoints</h3>
-    <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped out where local wi-fi spots are and marked them in our app&rsquo;s map view.</p>
-
-    <img src="assets/images/icons/fire.svg">
-    <h3>Survival Kit</h3>
-    <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you to setup a tent, start a fire, scratch your own back and lower your taxes.</p>
+      <h2 class="section-title section-title--white"><i class="material-icons md-icons md-icons--white section-title__icon">help_outline</i>How it works?</h2>
+      <img class="how-it-works__image" src="assets/images/logrange-structure.png" alt="Logrange Structure">
+    </div>
   </div>
 
-  <div id="testimonials">
-    <img src="assets/images/icons/comment.svg">
-    <h2>Real Testimonials</h2>
+  <div id="get-logrange" class="page-section">
+    <div class="wrapper">
 
-    <img src="assets/images/testimonial-jane.jpg">
-    <h3>Jane Doe</h3>
-    <h3>9 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+      <h2 class="section-title"><i class="material-icons md-icons section-title__icon">cloud_download</i>Get <strong>Logrange</strong></h2>
+        <div class="tab">
+          <button class="tab__tablinks" onclick="open-code-sample(event, 'Kubernetes')">Kubernetes</button>
+          <button class="tab__tablinks" onclick="open-code-sample(event, 'Standalone')">Standalone</button>
+        </div>
 
-    <img src="assets/images/testimonial-john.jpg">
-    <h3>John Smith</h3>
-    <h3>4 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+<!-- Tab content -->
+        <div id="Kubernetes" class="tabcontent">
+          <h3>Kubernetes</h3>
+          <p>code code code code</p>
+        </div>
 
-    <img src="assets/images/testimonial-cat.jpg">
-    <h3>Cat McKitty</h3>
-    <h3>6 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+        <div id="Standalone" class="tabcontent">
+          <h3>Standalone</h3>
+          <p>code code code code</p>
+        </div>
+
+      </div>
+    </div>
+
+  <div id="contact-form" class="page-section">
+    <div class="wrapper">
+
+      <div class="generic-content-container">
+        <h2 class="section-title"><i class="material-icons md-icons section-title__icon">mail_outline</i>Contact Us</h2>
+        <p>Should you reject to save your system logs due to storage cost or the logs size?</p>
+        <p>Do you considering to have security alerts and notifications for your system?</p>
+        <p>You have multiple monitoring tools for your system, but still think that having one place with all kinds of analytics is a good idea?</p>
+        <p>Do you want to have something like anomalies prediction?</p>
+        <p>Or may be you want to improve your system monitoring and analytics. Contact us and let us help you to resolve this problems.</p>
+    </div>
+    </div>
   </div>
 
-  <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#">Get in Touch</a></p>
+
+  <footer class="site-footer">
+    <div class="wrapper">
+      <p><span class="site-footer__text">Copyright &copy; 2019 Logrange. All rights reserved.</span><a class="btn btn--orange" href="#">Get Logrange</a></p>
+    </div>
   </footer>
+  <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
