--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Name: Logrange: streaming database</title>
-  <meta name="keywords" content="kjfsjvjkshflja;kdj bla-bla-bla dkfskdjlkj for Developers">
-  <meta name="description" content="ofuhslhfla djhflhs skjdhfalhdl skdjfhsdhf logs">
+  <meta name="keywords" content=" ">
+  <meta name="description" content=" ">
   <link rel='stylesheet' href='temp/styles/styles.css' type='text/css' >
 </head>
 <body>
