--- a/app/index.html
+++ b/app/index.html
@@ -1,184 +1,208 @@
 <!DOCTYPE html>
 <html lang='en'>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Name: Logrange: streaming database</title>
-  <meta name="keywords" content=" ">
-  <meta name="description" content=" ">
-  <link rel='stylesheet' href='temp/styles/styles.css' type='text/css' >
-</head>
-<body>
-  <header class="site-header">
-    <div class="wrapper">
-      <div class="site-header__logo">
-        <a href="index.html"><img src="assets/images/icons/logrange.svg"></a>
-      </div>
-      <div>
-
-        <div class="site-header__menu-icon">
-          <div class="site-header__menu-icon__middle"></div>
-        </div>
-
-        <div class="site-header__menu-content">
-          <div class="site-header__btn-container">
-            <a class="btn" href="#contact-form">Get in Touch</a>
-          </div>
-          <nav class="primary-nav primary-nav--pull-right">
-            <ul>
-              <li><a href="docs.html">Docs</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Download</a></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <div class="large-hero">
-    <div class="large-hero__text-content">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel="stylesheet" type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type='text/css'>
+    <title>Name: Logrange: streaming database</title>
+    <meta name="keywords" content=" ">
+    <meta name="description" content=" ">
+    <link rel='stylesheet' href='temp/styles/styles.css' type='text/css' >
+  </head>
+  <body>
+    <header class="site-header">
       <div class="wrapper">
-        <h2 class="large-hero__subtitle">Streaming database</h2>
-        <p class="large-hero__description">Logrange is highly performant streaming database for aggregation streams of records like application logs, system metrics, audit logs etc. from thousands of sources.</p>
-        <p><a class="btn btn--lightBlue btn--large" href="index.html">Get started</a></p>
-        <p><a class="btn btn--large" href="https://github.com/logrange">View on GitHub</a></p>
+        <div class="site-header__logo">
+          <a href="index.html"><img src="assets/images/icons/logrange.svg"></a>
+        </div>
+        <div>
+
+          <div class="site-header__menu-icon">
+            <div class="site-header__menu-icon__middle"></div>
+          </div>
+
+          <div class="site-header__menu-content">
+            <div class="site-header__btn-container">
+              <a class="btn" href="#contact-form" id="contact-form-link">Get in Touch</a>
+            </div>
+            <nav class="primary-nav primary-nav--pull-right">
+              <ul>
+                <li><a href="docs.html">Docs</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Download</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
+    </header>
 
-
-  <div id="features" class="page-section">
-    <div class="wrapper">
-
-      <h2 class="section-title">Designed for working with <strong>streams</strong></h2>
-
-      <div class="row row--gutters-large generic-content-container">
-
-        <div class="row__medium-4">
-
-          <div class="feature-item">
-            <i class="material-icons md-icons feature-item__icon">import_export</i>
-            <h3 class="feature-item__title">Native for Stream processing </h3>
-            <p>Saving streams of records for security alerts, analytics, statistics, anomalies predictions and system health monitoring</p>
-          </div>
-
-          <div class="feature-item">
-            <i class="material-icons md-icons feature-item__icon">network_check</i>
-            <h3 class="feature-item__title">Highly performant</h3>
-            <p>Accepting millions of records or hundred megabytes per second from thousands of data sources.</p>
+    <div class="large-hero">
+      <div class="large-hero__text-content">
+        <div class="wrapper">
+          <div class="row row--gutters">
+            <div class="row__medium-6">
+              <h1 class="large-hero__title">Logrange</h1>
+              <h2 class="large-hero__subtitle">streaming database</h2>
+              <p class="large-hero__description">Logrange is highly performant streaming database for aggregation streams of records like application logs, system metrics, audit logs etc. from thousands of sources.</p>
+              <p><a class="btn btn--lightBlue btn--large" href="index.html">Get started</a></p>
+              <p><a class="btn btn--large btn--gitHub" href="https://github.com/logrange"><img class="btn--gitHub__icon" src="assets/images/icons/GitHub-Mark-32px.png">View on GitHub</a></p>
+            </div>
           </div>
         </div>
-
-        <div class="row__medium-4">
-          <div class="feature-item">
-            <i class="material-icons md-icons feature-item__icon">code</i>
-            <h3 class="feature-item__title">Open Source</h3>
-            <p>Written entirely in Go, Logrange is available under the Apache 2.0 license for easy adoption. [Run it yourself](link), or [use pre-build installations](link).</p>
-          </div>
-
-          <div class="feature-item">
-            <i class="material-icons md-icons feature-item__icon">language</i>
-            <h3 class="feature-item__title">Scalability</h3>
-            <p> Logrange’s performance doesn't depend on the database size either it is 100Kb or 100Tb of data. Saving as much data as you need.</p>
-          </div>
-
-
-        </div>
-
-        <div class="row__medium-4">
-          <div class="feature-item">
-            <i class="material-icons md-icons feature-item__icon">call_split</i>
-            <h3 class="feature-item__title">Aggregate Data from Everywhere</h3>
-            <p>Stream data from different sources and locations: application logs, metrics, run-time records can be saved to Logrange.</p>
-          </div>
-
-          <div class="feature-item">
-            <i class="material-icons md-icons feature-item__icon">security</i>
-            <h3 class="feature-item__title">Secure</h3>
-            <p>The data is secure during access, transit and storage. Whether Logrange is deployed as standalone, in cloud or in a containerized environment.</p>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-  <div id="how-it-works" class="page-section page-section--blue">
-    <div class="wrapper">
-
-      <h2 class="section-title section-title--white section-title--centered"><!--<i class="material-icons md-icons md-icons--white section-title__icon">help_outline</i>-->How it works?</h2>
-      <img class="how-it-works__image" src="assets/images/logrange-structure.png" alt="Logrange Structure">
-    </div>
-  </div>
-
-  <div id="get-logrange" class="page-section">
-    <div class="wrapper">
-
-      <h2 class="section-title"><!--<i class="material-icons md-icons section-title__icon">cloud_download</i>-->Get <strong>Logrange</strong></h2>
-      <div class="generic-content-container">
-        <p>Logrange is under active development and it is not production ready yet. It is 100% open-source, so you can <a href="https://github.com/logrange">try it right now</a>.</p>
-
-      </div>
-        <div class="tab">
-          <button id="tabKubernetes" class="tab__tablinks">Kubernetes</button>
-          <button id="tabStandalone" class="tab__tablinks">Standalone</button>
-        </div>
-
-        <div id="Kubernetes" class="tab__tabcontent">
-          <p><code>$ kubernetes code code code</code></p>
-          <p><code>$ code code code code</code></p>
-        </div>
-
-        <div id="Standalone" class="tab__tabcontent">
-          <p><code>$ standalone code code code</code></p>
-          <p><code>$ code code code code</code></p>
-        </div>
-
       </div>
     </div>
 
-  <div id="contact-form" class="page-section">
-    <div class="wrapper">
 
-      <div class="generic-content-container">
-        <h2 class="section-title"><!--<i class="material-icons md-icons section-title__icon">mail_outline</i>-->Contact Us</h2>
-        <p>Should you reject to save your system logs due to storage cost or the logs size?</p>
-        <p>Do you considering to have security alerts and notifications for your system?</p>
-        <p>You have multiple monitoring tools for your system, but still think that having one place with all kinds of analytics is a good idea?</p>
-        <p>Do you want to have something like anomalies prediction?</p>
-        <p>Or may be you want to improve your system monitoring and analytics. Contact us and let us help you to resolve this problems.</p>
+    <div id="features" class="page-section">
+      <div class="wrapper">
+
+        <h2 class="section-title section-title--centered">Designed for working with streams</h2>
+
+        <div class="row row--gutters-large generic-content-container">
+
+          <div class="row__medium-4">
+
+            <div class="feature-item">
+              <i class="material-icons md-icons feature-item__icon">import_export</i>
+              <h3 class="feature-item__title">Native for Stream processing </h3>
+              <p>Saving streams of records for security alerts, analytics, statistics, anomalies predictions and system health monitoring</p>
+            </div>
+
+            <div class="feature-item">
+              <i class="material-icons md-icons feature-item__icon">network_check</i>
+              <h3 class="feature-item__title">Highly performant</h3>
+              <p>Accepting millions of records or hundred megabytes per second from thousands of data sources.</p>
+            </div>
+          </div>
+
+          <div class="row__medium-4">
+            <div class="feature-item">
+              <i class="material-icons md-icons feature-item__icon">code</i>
+              <h3 class="feature-item__title">Open Source</h3>
+              <p>Written entirely in Go, Logrange is available under the Apache 2.0 license for easy adoption. [Run it yourself](link), or [use pre-build installations](link).</p>
+            </div>
+
+            <div class="feature-item">
+              <i class="material-icons md-icons feature-item__icon">language</i>
+              <h3 class="feature-item__title">Scalability</h3>
+              <p> Logrange’s performance doesn't depend on the database size either it is 100Kb or 100Tb of data. Saving as much data as you need.</p>
+            </div>
+          </div>
+
+          <div class="row__medium-4">
+            <div class="feature-item">
+              <i class="material-icons md-icons feature-item__icon">call_split</i>
+              <h3 class="feature-item__title">Aggregate Data from Everywhere</h3>
+              <p>Stream data from different sources and locations: application logs, metrics, run-time records can be saved to Logrange.</p>
+            </div>
+
+            <div class="feature-item">
+              <i class="material-icons md-icons feature-item__icon">security</i>
+              <h3 class="feature-item__title">Secure</h3>
+              <p>The data is secure during access, transit and storage. Whether Logrange is deployed as standalone, in cloud or in a containerized environment.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
 
-    <form class="contact-us-form" action=" " method="POST">
-      <label class="label" for="name">Name</label>
-      <div class="contact-us-form__field">
-        <input type="text" tabindex="1" name="name" id="name" required>
+    <div id="how-it-works" class="page-section page-section--light-blue">
+      <div class="wrapper">
+
+        <h2 class="section-title section-title--centered">How it works?</h2>
+        <img class="how-it-works__image" src="assets/images/logrange-structure.png" alt="Logrange Structure">
       </div>
-      <label class="label" for="email">Email</label>
-      <div class="contact-us-form__field">
-        <input type="email" tabindex="2" name="email" id="email" required>
-      </div>
-      <label class="label" for="message">Message</label>
-      <div class="contact-us-form__field">
-        <textarea type="text" tabindex="3" placeholder="Write your message here" name="message" id="message" required></textarea>
-      </div>
-
-      <input class="btn btn--large btn--uppercase" type="submit" value="Submit">
-
-    </form>
-  </div>
-</div>
-
-
-
-  <footer class="site-footer">
-    <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2019 Logrange. All rights reserved.</span><a class="btn btn--lightBlue" href="#">Get Logrange</a></p>
     </div>
-  </footer>
-  <script src="/temp/scripts/App.js"></script>
 
-</body>
+    <div id="get-logrange" class="page-section--blue">
+
+        <h2 class="section-title section-title--white section-title--centered">Get Logrange</h2>
+
+        <div class="row row--overlap row--gutters-large">
+          <div class="row__medium-6">
+            <div class="generic-content-container generic-content-container--white">
+              <p>Logrange is under active development and it is not production ready yet. It is 100% open-source, so you can</p>
+              <a class="btn btn--large btn--gitHub" href="https://github.com/logrange"><img class="btn--gitHub__icon" src="assets/images/icons/GitHub-Mark-32px.png">View on GitHub</a>
+            </div>
+          </div>
+          <div class="row__medium-6">
+            <div class="tab">
+              <div class="tab__nav">
+                <li id="tabKubernetes" class="tab__tablinks">Kubernetes</li>
+                <li id="tabStandalone" class="tab__tablinks">Standalone</li>
+                <li id="tabDocker" class="tab__tablinks">Docker</li>
+              </div>
+
+              <div id="Kubernetes" class="tab__tabcontent">
+                <textarea id="KubernetesCodeSample">$ kubernetes code code code</textarea>
+                <button class="btn" data-clipboard-action="copy" data-clipboard-target="#KubernetesCodeSample">Copy to clipboard</button>
+              </div>
+
+              <div id="Standalone" class="tab__tabcontent">
+                <textarea id="StandaloneCodeSample">$ standalone code code code</textarea>
+                <button class="btn" data-clipboard-action="copy" data-clipboard-target="#StandaloneCodeSample">Copy to clipboard</button>
+              </div>
+
+              <div id="Docker" class="tab__tabcontent">
+                <textarea id="DockerCodeSample">$ docker code code code</textarea>
+                <button class="btn" data-clipboard-action="copy" data-clipboard-target="#DockerCodeSample">Copy to clipboard</button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div id="contact-form" class="page-section" data-matching-link="#contact-form-link">
+      <div class="wrapper">
+
+        <div class="row row--gutters">
+          <div class="row__medium-6">
+            <div class="generic-content-container">
+              <h2 class="section-title section-title--small-margin">Contact Us</h2>
+              <p>Should you reject to save your system logs due to storage cost or the logs size?</p>
+              <p>Do you considering to have security alerts and notifications for your system?</p>
+              <p>You have multiple monitoring tools for your system, but still think that having one place with all kinds of analytics is a good idea?</p>
+              <p>Do you want to have something like anomalies prediction?</p>
+              <p>Or may be you want to improve your system monitoring and analytics. Contact us and let us help you to resolve this problems.</p>
+            </div>
+          </div>
+
+          <div class="row__medium-6">
+            <form class="contact-us-form" action=" " method="POST">
+            <!--<label class="label" for="name">Name</label>-->
+              <div class="contact-us-form__field">
+                <input type="text" tabindex="1" placeholder="Name" name="name" id="name" required>
+              </div>
+            <!--<label class="label" for="email">Email</label>-->
+              <div class="contact-us-form__field">
+                <input type="email" tabindex="2" placeholder="Email" name="email" id="email" required>
+              </div>
+            <!--<label class="label" for="message">Message</label>-->
+              <div class="contact-us-form__field">
+                <textarea type="text" tabindex="3" placeholder="Write your message here" name="message" id="message" required></textarea>
+              </div>
+
+              <div class="contact-us-form__field">
+                <input class="btn btn--large btn--uppercase" type="submit" value="Send a message">
+              </div>
+
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <footer class="site-footer">
+      <div class="wrapper">
+        <p><span class="site-footer__text">Copyright &copy; 2019 Logrange. All rights reserved.</span><a class="btn btn--lightBlue" href="#">Get Logrange</a></p>
+      </div>
+    </footer>
+    <script src="/temp/scripts/App.js"></script>
+
+  </body>
 </html>
